fixed uneven padding issue in middle section between elements

--- a/css/index.css
+++ b/css/index.css
@@ -195,7 +195,8 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-right: 2% 
+    padding-right: 2%;
+
 
 }
 
@@ -203,7 +204,6 @@ li {
     width: 50%;
     display: flex;
     flex-direction: column;
-    padding-left: 1%;
     justify-content: space-around;
 
 }
@@ -211,22 +211,23 @@ li {
 
 
 .middleSectionRow2 {
-    width: 99%;
+    width: 100%;
     display: flex;
     padding-bottom: 5%;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .middleSectionRow2Column1 {
-    margin-right: 2%;
+
     width: 50%;
     flex-direction: column;
     display: flex;
+    padding-right: 2%;
 
 }
 
 .middleSectionRow2Column2 {
-    margin-right: 2%;
+
     width: 50%;
     flex-direction: column;
     display: flex;
@@ -240,8 +241,8 @@ li {
 
 .middleSectionRow3 {
     width: 100%;
-    margin: auto;
     display: flex;
+    padding-bottom: 5%;
     justify-content: space-around;
 }
 
@@ -249,7 +250,7 @@ li {
     width: 33%;
     display: flex;
     flex-direction: column;
-    margin-right: 2% 
+
 
 }
 
@@ -257,8 +258,8 @@ li {
     width: 33%;
     display: flex;
     flex-direction: column;
-    padding-left: 1%;
-    margin-right: 2% 
+
+
 
 
 }
@@ -267,7 +268,7 @@ li {
     width: 33%;
     display: flex;
     flex-direction: column;
-    padding-left: 1%;
+
 }
 
 .servicesMiddleSectionRow3 {
@@ -281,7 +282,8 @@ li {
     width: 50%;
     display: flex;
     flex-direction: column;
-    margin-right: 2%   
+    padding-right: 2%;
+   
 }
 
 
